--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/Create_Socrata_tables.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/Create_Socrata_tables.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "dataset_name = 'Urbansim Buildings'\n",
     "dataset_desc = 'Urbansim Buildings dataset'\n",
-    "tags = ['basis', 'land use data processing', 'parcels']\n",
+    "tags = ['basis', 'mdm']\n",
     "category = 'Land Use'\n",
     "\n",
     "dataset_metadata = create_socrata_dataset(dataset_name, dataset_desc, columns, category, tags)\n",
@@ -134,7 +134,7 @@
     "\n",
     "dataset_name = 'Urbansim Parcels'\n",
     "dataset_desc = 'Urbansim Parcels dataset'\n",
-    "tags = ['basis', 'land use data processing', 'parcels']\n",
+    "tags = ['basis', 'parcels', 'mdm']\n",
     "category = 'Land Use'\n",
     "\n",
     "dataset_metadata = create_socrata_dataset(dataset_name, dataset_desc, columns, category, tags)\n",
