--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/Create_parcels_2018.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/Create_parcels_2018.ipynb
@@ -15,10 +15,7 @@
     "\n",
     "user = os.environ['USER']\n",
     "sys.path.insert(0, '/Users/{}/Box/DataViz Projects/Utility Code'.format(user))\n",
-    "from utils_io import *\n",
-    "\n",
-    "sys.path.insert(0, '/Users/{}/Box/DataViz Projects/Application Secure Files'.format(user))\n",
-    "from creds import SOCRATA_CREDS"
+    "from utils_io import *"
    ]
   },
   {
@@ -54,12 +51,9 @@
    "outputs": [],
    "source": [
     "# pull the data from Socrata\n",
-    "endpoint = SOCRATA_CREDS['domain']\n",
-    "username = SOCRATA_CREDS[user]['username']\n",
-    "password = SOCRATA_CREDS[user]['password']\n",
-    "app_token = SOCRATA_CREDS[user]['app_token']\n",
+    "socrata_data_id = 'fqea-xb6g'\n",
     "\n",
-    "df = pull_df_from_socrata(endpoint, username, password, app_token)\n",
+    "df = pull_df_from_socrata(socrata_data_id)\n",
     "# this column is too long for max Redshift column length (65,535 when stored as varchar)\n",
     "df.drop('the_geom', axis=1, inplace=True)"
    ]
