--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/UrbanSim Dataset Exploration.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/UrbanSim Dataset Exploration.ipynb
@@ -46,23 +46,31 @@
     "\n",
     "## Socrata Data Sets\n",
     "\n",
-    "**Parcels 2018**\n",
+    "### Parcels 2018\n",
     "\n",
-    "Documentation: [Parcels 2018](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/parcels_2018.md)\n",
+    "**Documentation**: [Parcels 2018](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/parcels_2018.md)\n",
     "\n",
-    "Socrata dataset ID: fqea-xb6g\n",
+    "**Socrata dataset ID**: fqea-xb6g\n",
     "\n",
-    "**UrbanSim Buildings**\n",
+    "**Primary key**: 'joinid'\n",
     "\n",
-    "Documentation: [UrbanSim Buildings](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/buildings.md)\n",
+    "### UrbanSim Buildings\n",
     "\n",
-    "Socrata dataset ID: rrrx-2reu\n",
+    "**Documentation**: [UrbanSim Buildings](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/buildings.md)\n",
     "\n",
-    "**UrbanSim Parcels**\n",
+    "**Socrata dataset ID**: rrrx-2reu\n",
     "\n",
-    "Documentation: [UrbanSim Parcels](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/urbansim_parcels.md)\n",
+    "**Primary key**: 'building_id'\n",
     "\n",
-    "Socrata dataset ID: 6q7r-gybw\n",
+    "**Foreign key**: 'joinid\n",
+    "\n",
+    "### UrbanSim Parcels\n",
+    "\n",
+    "**Documentation**: [UrbanSim Parcels](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/urbansim_parcels.md)\n",
+    "\n",
+    "**Socrata dataset ID**: 6q7r-gybw\n",
+    "\n",
+    "**Primary key**: 'joinid'\n",
     "\n",
     "\n",
     "### Socrata Credentials\n",
@@ -74,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to use:\n",
+    "# How to use this notebook:\n",
     "\n",
     "This notebook shows how to identify datasets of interest (based on tags) on Socrata, pull data from Socrata into a pandas DataFrame, and begin exploratory data analysis (EDA)"
    ]
@@ -83,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Find data sets of interest from Socrata"
+    "## 1. Find data sets of interest from Socrata\n",
+    "\n",
+    "First pull the Socrata data assets table to get metadata for all data assets."
    ]
   },
   {
@@ -111,6 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# these are the relevant columns for selecting relevant datasets\n",
     "keep_cols = ['api_endpoint', 'category', 'dataset_link',\n",
     "             'endpoint', 'keywords', 'name', 'u_id', 'visits']\n",
     "\n",
@@ -119,19 +130,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "filter_tag = 'urbansim'\n",
-    "urbansim_table_data = socrata_asset_table[socrata_asset_table['keywords'].str.contains(filter_tag) == True]\n",
-    "urbansim_table_data"
+    "Filter the datasets to the ones of interest by filtering on tag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_datasets_by_tag(filter_tag):\n",
+    "    urbansim_table_data = socrata_asset_table[socrata_asset_table['keywords'].str.contains(filter_tag) == True]\n",
+    "    filtered_datasets = urbansim_table_data[['name', 'u_id', 'keywords']]\n",
+    "    return filtered_datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +176,7 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>u_id</th>\n",
+       "      <th>keywords</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -164,35 +184,44 @@
        "      <th>19</th>\n",
        "      <td>UrbanSim Parcels</td>\n",
        "      <td>6q7r-gybw</td>\n",
+       "      <td>mdm,basis,urbansim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Deprecated - Regional Land Use in 2019 (Draft)</td>\n",
        "      <td>9tcv-7ybg</td>\n",
+       "      <td>plu,land use,urbansim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
        "      <td>Buildings</td>\n",
        "      <td>rrrx-2reu</td>\n",
+       "      <td>basis,mdm,urbansim</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               name       u_id\n",
-       "19                                 UrbanSim Parcels  6q7r-gybw\n",
-       "28   Deprecated - Regional Land Use in 2019 (Draft)  9tcv-7ybg\n",
-       "113                                       Buildings  rrrx-2reu"
+       "                                               name       u_id  \\\n",
+       "19                                 UrbanSim Parcels  6q7r-gybw   \n",
+       "28   Deprecated - Regional Land Use in 2019 (Draft)  9tcv-7ybg   \n",
+       "113                                       Buildings  rrrx-2reu   \n",
+       "\n",
+       "                  keywords  \n",
+       "19      mdm,basis,urbansim  \n",
+       "28   plu,land use,urbansim  \n",
+       "113     basis,mdm,urbansim  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "urbansim_table_data[['name', 'u_id']]"
+    "urbansim_datasets = filter_datasets_by_tag('urbansim')\n",
+    "urbansim_datasets"
    ]
   },
   {
@@ -255,7 +284,7 @@
     }
    ],
    "source": [
-    "# pull parcels and buildings for now\n",
+    "# pull urbansim parcels and buildings for now\n",
     "urbansim_buildings_id = 'rrrx-2reu'\n",
     "urbansim_buildings = pull_df_from_socrata(urbansim_buildings_id)"
    ]
