--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/UrbanSim Dataset Exploration.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/UrbanSim Dataset Exploration.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,23 +46,18 @@
     "\n",
     "## Socrata Data Sets\n",
     "\n",
-    "### Parcels 2018\n",
-    "\n",
-    "**Documentation**: [Parcels 2018](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/parcels_2018.md)\n",
-    "\n",
-    "**Socrata dataset ID**: fqea-xb6g\n",
-    "\n",
-    "**Primary key**: 'joinid'\n",
     "\n",
     "### UrbanSim Buildings\n",
     "\n",
     "**Documentation**: [UrbanSim Buildings](https://github.com/BayAreaMetro/DataServices/blob/master/Project-Documentation/mdm/land-people-mdm/buildings.md)\n",
     "\n",
-    "**Socrata dataset ID**: rrrx-2reu\n",
+    "**Socrata dataset ID**: ahwz-jtst\n",
     "\n",
-    "**Primary key**: 'building_id'\n",
+    "**Socrata dataset**: [UrbanSim Buildings](https://data.bayareametro.gov/Cadastral/UrbanSim-Parcels/6q7r-gybw)\n",
     "\n",
-    "**Foreign key**: 'joinid\n",
+    "**Primary key**: `building_id`\n",
+    "\n",
+    "**Foreign key**: `joinid`\n",
     "\n",
     "### UrbanSim Parcels\n",
     "\n",
@@ -70,12 +65,59 @@
     "\n",
     "**Socrata dataset ID**: 6q7r-gybw\n",
     "\n",
-    "**Primary key**: 'joinid'\n",
+    "**Socrata dataset**: [UrbanSim Parcels](https://data.bayareametro.gov/Cadastral/UrbanSim-Parcels/6q7r-gybw)\n",
+    "\n",
+    "**Primary key**: `joinid`\n",
+    "\n",
+    "### General Plan and Zoning 2018\n",
+    "\n",
+    "**Socrata dataset ID**: udk3-z2d5\n",
+    "\n",
+    "**Socrata dataset**: [General Plan and Zoning](https://data.bayareametro.gov/Land-Use/General-Plan-and-Zoning-2018/udk3-z2d5)\n",
+    "\n",
+    "**Primary key**: `zoning_id` (matches `recid` in General Plan and Regional Zoning tables and `RecID` in Codes tables)\n",
+    "\n",
+    "**Foreign key**: `joinid`\n",
     "\n",
     "\n",
-    "### Socrata Credentials\n",
+    "### General Plan Codes\n",
     "\n",
-    "Socrata credentials for this  are managed by Kaya Tollas (ktollas@bayareametro.gov)"
+    "**Socrata dataset ID**: vzcc-dhby\n",
+    "\n",
+    "**Socrata dataset**: [General Plan Codes](https://data.bayareametro.gov/Land-Use/Regional-General-Plan-Codes-2018/vzcc-dhby)\n",
+    "\n",
+    "**Primary key**: `RecID` (matches `zoning_id` in General Plan and Zoning 2018 table and `recid` in General Plan and Regional Zoning tables)\n",
+    "\n",
+    "\n",
+    "### General Plan\n",
+    "\n",
+    "**Socrata dataset ID**: cc3g-fj4w\n",
+    "\n",
+    "**Socrata dataset**: [General Plan](https://data.bayareametro.gov/Land-Use/View-based-on-Regional-General-Plan-Codes-2018/cc3g-fj4w)\n",
+    "\n",
+    "**Primary key**: `recid` (matches `zoning_id` in General Plan and Zoning 2018 table and `RecID` in Codes tables)\n",
+    "\n",
+    "\n",
+    "### Regional Zoning Codes\n",
+    "\n",
+    "**Socrata dataset ID**: qdrp-c5ra\n",
+    "\n",
+    "**Socrata dataset**: [Regional Zoning Codes](https://data.bayareametro.gov/Land-Use/Regional-Zoning-Codes-2018/qdrp-c5ra)\n",
+    "\n",
+    "**Primary key**: `RecID` (matches `zoning_id` in General Plan and Zoning 2018 table and `recid` in General Plan and Regional Zoning tables)\n",
+    "\n",
+    "### Regional Zoning\n",
+    "\n",
+    "**Socrata dataset ID**: q2p6-hbrp\n",
+    "\n",
+    "**Socrata dataset**: [Regional Zoning](https://data.bayareametro.gov/Land-Use/View-of-Parcels-and-Regional-Zoning-2018/q2p6-hbrp)\n",
+    "\n",
+    "**Primary key**: `recid` (matches `zoning_id` in General Plan and Zoning 2018 table and `RecID` in Codes tables)\n",
+    "\n",
+    "\n",
+    "## Socrata Credentials\n",
+    "\n",
+    "Socrata credentials for this notebook are managed by Kaya Tollas (ktollas@bayareametro.gov)"
    ]
   },
   {
@@ -98,18 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 1 chunks of 156 rows each\n",
-      "pulling chunk 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "socrata_asset_table_id = 'rs6b-4exy'\n",
     "socrata_asset_table = pull_df_from_socrata(socrata_asset_table_id)"
@@ -138,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,78 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>u_id</th>\n",
-       "      <th>keywords</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>UrbanSim Parcels</td>\n",
-       "      <td>6q7r-gybw</td>\n",
-       "      <td>mdm,basis,urbansim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Deprecated - Regional Land Use in 2019 (Draft)</td>\n",
-       "      <td>9tcv-7ybg</td>\n",
-       "      <td>plu,land use,urbansim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>Buildings</td>\n",
-       "      <td>rrrx-2reu</td>\n",
-       "      <td>basis,mdm,urbansim</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               name       u_id  \\\n",
-       "19                                 UrbanSim Parcels  6q7r-gybw   \n",
-       "28   Deprecated - Regional Land Use in 2019 (Draft)  9tcv-7ybg   \n",
-       "113                                       Buildings  rrrx-2reu   \n",
-       "\n",
-       "                  keywords  \n",
-       "19      mdm,basis,urbansim  \n",
-       "28   plu,land use,urbansim  \n",
-       "113     basis,mdm,urbansim  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "urbansim_datasets = filter_datasets_by_tag('urbansim')\n",
     "urbansim_datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basis_tables = filter_datasets_by_tag('basis')\n",
+    "basis_tables"
    ]
   },
   {
@@ -232,60 +209,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull UrbanSim Buildings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 37 chunks of 100000 rows each\n",
-      "pulling chunk 0\n",
-      "pulling chunk 1\n",
-      "pulling chunk 2\n",
-      "pulling chunk 3\n",
-      "pulling chunk 4\n",
-      "pulling chunk 5\n",
-      "pulling chunk 6\n",
-      "pulling chunk 7\n",
-      "pulling chunk 8\n",
-      "pulling chunk 9\n",
-      "pulling chunk 10\n",
-      "pulling chunk 11\n",
-      "pulling chunk 12\n",
-      "pulling chunk 13\n",
-      "pulling chunk 14\n",
-      "pulling chunk 15\n",
-      "pulling chunk 16\n",
-      "pulling chunk 17\n",
-      "pulling chunk 18\n",
-      "pulling chunk 19\n",
-      "pulling chunk 20\n",
-      "pulling chunk 21\n",
-      "pulling chunk 22\n",
-      "pulling chunk 23\n",
-      "pulling chunk 24\n",
-      "pulling chunk 25\n",
-      "pulling chunk 26\n",
-      "pulling chunk 27\n",
-      "pulling chunk 28\n",
-      "pulling chunk 29\n",
-      "pulling chunk 30\n",
-      "pulling chunk 31\n",
-      "pulling chunk 32\n",
-      "pulling chunk 33\n",
-      "pulling chunk 34\n",
-      "pulling chunk 35\n",
-      "pulling chunk 36\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# pull urbansim parcels and buildings for now\n",
-    "urbansim_buildings_id = 'rrrx-2reu'\n",
+    "urbansim_buildings_id = 'ahwz-jtst'\n",
     "urbansim_buildings = pull_df_from_socrata(urbansim_buildings_id)"
    ]
   },
@@ -300,76 +238,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3655207, 15)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "urbansim_buildings.shape"
+    "urbansim_buildings.shape  # (3655207, 15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urbansim_buildings['apn'].nunique()  # 2507764"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull UrbanSim Parcels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 37 chunks of 100000 rows each\n",
-      "pulling chunk 0\n",
-      "pulling chunk 1\n",
-      "pulling chunk 2\n",
-      "pulling chunk 3\n",
-      "pulling chunk 4\n",
-      "pulling chunk 5\n",
-      "pulling chunk 6\n",
-      "pulling chunk 7\n",
-      "pulling chunk 8\n",
-      "pulling chunk 9\n",
-      "pulling chunk 10\n",
-      "pulling chunk 11\n",
-      "pulling chunk 12\n",
-      "pulling chunk 13\n",
-      "pulling chunk 14\n",
-      "pulling chunk 15\n",
-      "pulling chunk 16\n",
-      "pulling chunk 17\n",
-      "pulling chunk 18\n",
-      "pulling chunk 19\n",
-      "pulling chunk 20\n",
-      "pulling chunk 21\n",
-      "pulling chunk 22\n",
-      "pulling chunk 23\n",
-      "pulling chunk 24\n",
-      "pulling chunk 25\n",
-      "pulling chunk 26\n",
-      "pulling chunk 27\n",
-      "pulling chunk 28\n",
-      "pulling chunk 29\n",
-      "pulling chunk 30\n",
-      "pulling chunk 31\n",
-      "pulling chunk 32\n",
-      "pulling chunk 33\n",
-      "pulling chunk 34\n",
-      "pulling chunk 35\n",
-      "pulling chunk 36\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "urbansim_parcels_id = '6q7r-gybw'\n",
     "urbansim_parcels = pull_df_from_socrata(urbansim_parcels_id)"
@@ -386,22 +284,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3655207, 7)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "urbansim_parcels.shape"
+    "urbansim_parcels.shape  # (3655207, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urbansim_parcels['apn'].nunique()  # 2643041"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull General Plan and Zoning 2018"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "gp_zoning_id = 'udk3-z2d5'\n",
+    "gp_zoning = pull_df_from_socrata(gp_zoning_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp_zoning.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp_zoning.shape  # (2142677, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp_zoning['joinid'].nunique()  # 2091536"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull General Plan Codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "gp_codes_id = 'vzcc-dhby'\n",
+    "gp_codes = pull_df_from_socrata(gp_codes_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp_codes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp_codes.shape  # (2240, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gp_codes['recid'].nunique()  # 2240"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull General Plan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "general_plan_id = 'cc3g-fj4w'\n",
+    "general_plan = pull_df_from_socrata(general_plan_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "general_plan.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "general_plan.shape  # (334271, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "general_plan['recid'].nunique() # 147"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull Regional Zoning Codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rz_codes_id = 'qdrp-c5ra'\n",
+    "rz_codes = pull_df_from_socrata(rz_codes_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rz_codes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rz_codes.shape  # (2979, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rz_codes['recid'].nunique() # 2979"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull Regional Zoning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regional_zoning_id = 'q2p6-hbrp'\n",
+    "regional_zoning = pull_df_from_socrata(regional_zoning_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regional_zoning.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regional_zoning.shape  # (148496, 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regional_zoning['recid'].nunique() # 240"
    ]
   },
   {
@@ -412,6 +534,53 @@
     "\n",
     "Your exploratory data analysis steps go here:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jurisdict = 'PA'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jdf = gp_zoning.merge(regional_zoning, left_on='zoning_id', right_on='recid')\n",
+    "jdf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
