--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/UrbanSim Dataset Exploration.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/UrbanSim Dataset Exploration.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,11 +309,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pulling data in 22 chunks of 100000 rows each\n",
+      "pulling chunk 0\n",
+      "pulling chunk 1\n",
+      "pulling chunk 2\n",
+      "pulling chunk 3\n",
+      "pulling chunk 4\n",
+      "pulling chunk 5\n",
+      "pulling chunk 6\n",
+      "pulling chunk 7\n",
+      "pulling chunk 8\n",
+      "pulling chunk 9\n",
+      "pulling chunk 10\n",
+      "pulling chunk 11\n",
+      "pulling chunk 12\n",
+      "pulling chunk 13\n",
+      "pulling chunk 14\n",
+      "pulling chunk 15\n",
+      "pulling chunk 16\n",
+      "pulling chunk 17\n",
+      "pulling chunk 18\n",
+      "pulling chunk 19\n",
+      "pulling chunk 20\n",
+      "pulling chunk 21\n"
+     ]
+    }
+   ],
    "source": [
     "gp_zoning_id = 'udk3-z2d5'\n",
     "gp_zoning = pull_df_from_socrata(gp_zoning_id)"
@@ -355,11 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pulling data in 1 chunks of 2240 rows each\n",
+      "pulling chunk 0\n"
+     ]
+    }
+   ],
    "source": [
     "gp_codes_id = 'vzcc-dhby'\n",
     "gp_codes = pull_df_from_socrata(gp_codes_id)"
@@ -549,15 +588,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "jdf = gp_zoning.merge(regional_zoning, left_on='zoning_id', right_on='recid')\n",
+    "jdf = gp_zoning.merge(gp_codes, left_on='zoning_id', right_on='recid')\n",
     "jdf.shape"
    ]
   },
